# eduresearch-igm

./: .gitignore  QA_CHECKLIST.md  README.md  cleanup_mandarin_messages.sql  package-lock.json  package.json  turbo.json
.github/workflows/: deploy-doc-parser.yml
apps/web/: .env.example  README.md  middleware.ts  next.config.ts  package.json  vercel.json
apps/web/lib/: ai.ts  (+11 more)
services/doc-parser/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
services/doc-parser/src/: main.rs
services/journal-scraper/: Cargo.toml  Dockerfile  railway.json
services/journal-scraper/src/: main.rs
services/research-brain/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/research-brain/app/: __init__.py  main.py
services/research-brain/app/core/: config.py
services/research-brain/app/routers/: __init__.py  analytics.py  classify.py  health.py  jobs.py  recommend.py  scoring.py  search.py
services/research-brain/app/schemas/: analytics.py  classify.py  common.py  jobs.py  recommend.py  scoring.py  search.py
services/research-brain/app/services/: analytics_service.py  crossref_service.py  job_service.py  openalex_service.py  proposal_scoring_service.py  retrieval_service.py  topic_classifier_service.py  vector_service.py
services/research-brain/app/workers/: celery_app.py  tasks.py
services/research-brain/docs/: integration.md
services/research-brain/sql/: 001_research_brain.sql
services/research-brain/tests/: test_api.py  test_health.py
supabase/migrations/: 001_initial.sql  002_start_document_session_rpc.sql  003_research_brain.sql
(+35 files in other folders)
