[package]
name = "doc-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
pdf-extract = "0.7"
uuid = { version = "1", features = ["v4"] }
regex = "1"